fixed bug on animation when colums were collapsed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,14 +34,17 @@
         height: 100vh;
         overflow: hidden;
     }
-
     .column-collapse{
         display: block !important;
+    }
+    #second-col{
+        margin-bottom: 10px;
     }
 
 }
 
 .float{
+    z-index: 999;
 	position:fixed;
 	width:60px;
 	height:60px;
